spacing fixes

--- a/css/main.css
+++ b/css/main.css
@@ -108,10 +108,6 @@ html {
   margin-bottom: 2em;
 }
 
-.mb-5 {
-  margin-bottom: 1em !important;
-}
-
 .mb-5em {
   margin-bottom: 5em;
 }
@@ -357,10 +353,6 @@ h3 {
 
 .section-expertise h3 {
   font-size: 2rem;
-}
-
-.section-expertise .col-auto {
-  padding: 1rem 3rem;
 }
 
 .section-expertise li {
